# WPC_ImageProcessing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: analyze.py  image_exploration.ipynb  int_sort.py  remove_agglomerations.ipynb  remove_agglomerations_2.ipynb  remove_agglomerations_3.ipynb  remove_background.ipynb  remove_background_color.ipynb  remove_background_color_2.ipynb  remove_background_color_3.ipynb  remove_background_experiment.ipynb  remove_background_general.ipynb  remove_background_gray.ipynb  remove_background_w_utils.ipynb  segmentation.ipynb  test_mask_removal.ipynb  utils.py  utils_demo.ipynb
src_testing/: test_basic_sort.py
testing/: test_basic_sort.py
